compiler/testData/cli/jvm/requireKotlinCompilerVersion.out
compiler/testData/cli/jvm/requireKotlinCompilerVersion.kt:12:20: error: 'Foo' is only available since Kotlin 9.9.90 and cannot be used in Kotlin $VERSION$
import test.access.Foo
                   ^
compiler/testData/cli/jvm/requireKotlinCompilerVersion.kt:15:5: error: 'Foo' is only available since Kotlin 9.9.90 and cannot be used in Kotlin $VERSION$
    Foo()
    ^
COMPILATION_ERROR
